# fumbling-around

./: .gitignore  README.md  dev.sh  index.html  task_bulk_matches.md  task_human_interface.md  task_human_interface_fixes.md
CribbageBots/: REVIEW.md  SECURITY_REVIEW.md
CribbageBots/backend/: DEVELOPERS.md  README.md  pyproject.toml
CribbageBots/backend/scratch/: benchmark_engine.py  benchmark_local.py  build_keep_prior.py  per_hand_analysis.py  test_integrity.py  test_manual_count.py  verify_hardening.py  verify_randomness.py
CribbageBots/backend/scripts/: benchmark_bots.py  head_to_head.py
CribbageBots/backend/src/: api.py
CribbageBots/backend/src/cribbage/: __init__.py  api.py  bot.py  cli.py  engine.py  exceptions.py  models.py  rules.py  security.py  tournament.py
CribbageBots/backend/src/cribbage/bots/: __init__.py  gemini_flash_simple_bot.py  greedy_bot.py  human_player.py  joren_bot_v0.py  joren_bot_v3.py  joren_bot_v4.py  leifv1_bot.py  leifv2_bot.py  leifv3_bot.py  random_bot.py  remote_bot.py  scaredy_bot.py  slow_bot.py
CribbageBots/backend/tests/: profile_game.py  test_engine.py
DocSortBot/: .docsortbot_config  README.md  com.jorenjackson.docsortbot.plist  pyproject.toml
DocSortBot/src/docsortbot/: __init__.py  cli.py  db.py  extractor.py  sorter.py  watcher.py  web.py
DocSortBot/tests/: capture_dry_run.py  manual_test.py  test_auto_discovery.py  test_extractor.py  test_money.py  test_move.py  test_recovery.py  test_sorter.py  test_v2_manual.py
Ski2SeaTracker/: .gitignore  Nordic_ski_leg_1.gpx  Ski_to_Sea_Downhill_Ski_Leg.gpx  index.html  (+17 more)
(+35 files in other folders)
