[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docsortbot"
version = "0.1.0"
description = "A CLI tool to automatically sort statements by year."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "watchdog>=3.0.0",
    "pypdf>=3.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
docsortbot = "docsortbot.cli:main"
