[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cribbage-engine"
version = "0.1.0"
description = "Cribbage tournament engine and API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "websockets",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[project.scripts]
cribbage = "cribbage.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cribbage"]
